# whylogs-container-python

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  whylabs_toolkit-0.0.1-py3-none-any.whl
.github/workflows/: workflow.yml
src/ai/util/: list_util.py  list_util_test.py  string_util_test.py  time.py  time_test.py
src/ai/whylabs/actor/: actor.py  profile_actor.py  profile_actor_messages.py  profile_actor_test.py
src/ai/whylabs/container/: auth.py  config.py  main.py  requests.py  routes.py  startup.py
