[tool.poetry]
name = "whylogs container"
version = "0.1.0"
description = ""
authors = ["Anthony Naddeo <anthony.naddeo@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "src/**/*.py"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.89.0"}
uvicorn = "^0.20.0"
pandas = "^1.5.2"
faster-fifo = "^1.4.2"
whylogs = {extras = ["whylabs"], version = "^1.1.24"}
requests = "^2.28.2"
orjson = "^3.8.6"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
mypy = "^0.991"
pytest = "^7.2.0"
snakeviz = "^2.1.1"
py-spy = "^0.3.14"

[tool.black]
line-length = 140

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 140
